# Dazzle

./: .gitignore  .gitmodules  CMakeLists.txt
Dazzle/: CMakeLists.txt
Dazzle/include/: Cube.hpp  DazzleEngine.hpp  FileManager.hpp  Mesh.hpp  Object3D.hpp  Plane.hpp  RenderSystem.hpp  ShaderManager.hpp  ShadingEffects.hpp  Singleton.hpp  Skybox.hpp  Sphere.hpp  Torus.hpp  Utilities.hpp
Dazzle/source/: Cube.cpp  FileManager.cpp  Mesh.cpp  Plane.cpp  RenderSystem.cpp  ShaderManager.cpp  ShadingEffects.cpp  Skybox.cpp  Sphere.cpp  Torus.cpp  main.cpp
Examples/: CMakeLists.txt
Examples/AlphaTest/: CMakeLists.txt  README.md  main.cpp
Examples/AlphaTest/shaders/: AlphaTest.fs.glsl
Examples/BlinnPhongModel/: CMakeLists.txt  README.md  main.cpp
Examples/BlinnPhongModel/shaders/: BlinnPhong.fs.glsl
Examples/Bloom/: CMakeLists.txt  README.md  main.cpp
Examples/Bloom/shaders/: Bloom.fs.glsl
Examples/Common/: App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Cursor.cpp  Cursor.hpp  CursorInputMode.cpp  CursorInputMode.hpp  Framebuffer.cpp  Framebuffer.hpp  FramebufferObserver.hpp  Keyboard.cpp  Keyboard.hpp  Scene.hpp  UserInterface.cpp  UserInterface.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  glTF.cpp  glTF.hpp  pch.hpp
Examples/CubemapReflection/: CMakeLists.txt  README.md  main.cpp
Examples/CubemapReflection/shaders/: CubemapReflection.fs.glsl  CubemapReflection.vs.glsl  Skybox.vs.glsl
Examples/CubemapRefraction/: CMakeLists.txt  README.md  main.cpp
Examples/CubemapRefraction/shaders/: CubemapRefraction.fs.glsl  CubemapRefraction.vs.glsl  Skybox.fs.glsl
Examples/DebugShaders/: CMakeLists.txt  README.md  main.cpp
Examples/DebugShaders/shaders/: FlatColor.fs.glsl  FlatColor.vs.glsl  Normals.fs.glsl  Normals.vs.glsl  TextureCoordinates.fs.glsl  TextureCoordinates.vs.glsl
Examples/DiffuseShader/: CMakeLists.txt  README.md  main.cpp
Examples/DiffuseShader/shaders/: DiffuseShader.fs.glsl
Examples/DiffuseShader/source/: main.cpp
Examples/DiffuseShading/: CMakeLists.txt  main.cpp
Examples/DiffuseShading/shaders/: DiffuseShader.vs.glsl
Examples/DirectionalLight/: CMakeLists.txt  README.md  main.cpp
Examples/DirectionalLight/shaders/: DirectionalLight.fs.glsl  DirectionalLight.vs.glsl
Examples/DiscardFragments/: CMakeLists.txt  README.md  main.cpp
Examples/DiscardFragments/shaders/: Discard.fs.glsl  Discard.vs.glsl
Examples/EDF/: CMakeLists.txt  README.md  main.cpp
Examples/EDF/shaders/: EdgeDetectionFilter.fs.glsl  EdgeDetectionFilter.vs.glsl
Examples/FlatShading/: CMakeLists.txt  README.md  main.cpp
Examples/FlatShading/shaders/: FlatShader.fs.glsl  FlatShader.vs.glsl
Examples/Fog/: CMakeLists.txt  README.md  main.cpp
Examples/Fog/shaders/: Fog.fs.glsl
Examples/GBF/: CMakeLists.txt  README.md  main.cpp
Examples/GBF/shaders/: GaussianBlurFilter.fs.glsl
Examples/Gamma/: CMakeLists.txt  README.md  main.cpp
Examples/Gamma/shaders/: GammaCorrection.fs.glsl  GammaCorrection.vs.glsl
Examples/MultipleTextures/: CMakeLists.txt  README.md  main.cpp
Examples/MultipleTextures/shaders/: MultipleTextures.fs.glsl
Examples/NormalMapping/: CMakeLists.txt  README.md  main.cpp
Examples/NormalMapping/shaders/: NormalMapping.fs.glsl  NormalMapping.vs.glsl
Examples/OIT/: CMakeLists.txt  README.md  main.cpp
Examples/OIT/shaders/: OIT.fs.glsl
Examples/PBR/: CMakeLists.txt  README.md  main.cpp
Examples/PBR/shaders/: PBR.fs.glsl
Examples/ParallaxMapping/: CMakeLists.txt  README.md  main.cpp
Examples/ParallaxMapping/shaders/: ParallaxMapping.fs.glsl  ParallaxMapping.vs.glsl
Examples/PerFragmentShading/: CMakeLists.txt  README.md  main.cpp
Examples/PerFragmentShading/shaders/: PerFragmentShading.fs.glsl  PerFragmentShading.vs.glsl
Examples/PhongModel/: CMakeLists.txt  README.md  main.cpp
Examples/PhongModel/shaders/: Phong.vs.glsl
Examples/ProjectiveTextureMapping/: CMakeLists.txt  README.md  main.cpp
Examples/ProjectiveTextureMapping/shaders/: ProjectiveTexture.fs.glsl  ProjectiveTexture.vs.glsl
Examples/RenderToTexture/: CMakeLists.txt  README.md  main.cpp
Examples/RenderToTexture/shaders/: RenderToTexture.fs.glsl  RenderToTexture.vs.glsl
Examples/SSAO/: CMakeLists.txt  README.md  main.cpp
Examples/SSAO/shaders/: SSAO.fs.glsl
Examples/SpotLight/: CMakeLists.txt  README.md  main.cpp
Examples/SpotLight/shaders/: SpotLight.fs.glsl
Examples/Texture/: CMakeLists.txt  README.md  main.cpp
Examples/Texture/shaders/: Texture.fs.glsl  Texture.vs.glsl
Examples/ToneMapping/: CMakeLists.txt  README.md  main.cpp
Examples/ToneMapping/shaders/: ToneMapping.fs.glsl  ToneMapping.vs.glsl
Examples/ToonShading/: CMakeLists.txt  README.md  main.cpp
Examples/ToonShading/shaders/: ToonShading.fs.glsl  ToonShading.vs.glsl
Examples/TwoSidedShading/: CMakeLists.txt  README.md  main.cpp
Examples/TwoSidedShading/shaders/: TwoSided.fs.glsl  TwoSided.vs.glsl
Examples/_glfw_and_opengl3/include/: Utils.h
Examples/_glfw_and_opengl3/shaders/: vertex_shader.glsl
Examples/_sandbox/source/: main.cpp
Examples/_win32_and_opengl3/: CMakeLists.txt
Examples/glTF/: CMakeLists.txt  README.md  main.cpp
Examples/glTF/shaders/: glTF.fs.glsl  glTF.vs.glsl
Libraries/: CMakeLists.txt
Libraries/gl3w/: CMakeLists.txt
Libraries/imgui/: CMakeLists.txt
examples/: CMakeLists.txt
examples/Common/: App.hpp  Camera.cpp  Camera.hpp  CursorObserver.hpp  KeyboardObserver.hpp  Window.cpp  Window.hpp
examples/DiffuseShader/: CMakeLists.txt  README.md
examples/DiffuseShader/shaders/: DiffuseShader.vs.glsl
examples/_mahogany_ui/: CMakeLists.txt  README.md
examples/_sandbox/: CMakeLists.txt  README.md
examples/_sandbox/source/: main.cpp
examples/example_glfw_opengl3/: CMakeLists.txt  README.md
examples/example_glfw_opengl3/shaders/: fragment_shader.glsl
examples/example_glfw_opengl3/source/: Utils.cpp  main.cpp
examples/example_mahogany/: CMakeLists.txt
examples/example_mahogany/source/: main.cpp
examples/example_win32_opengl3/: CMakeLists.txt
examples/glfw_and_opengl3/: CMakeLists.txt
(+3 files in other folders)
